try to fix centering on mobile 2

--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ a:hover {
 .wrapper {
     display: grid;
     grid-template-rows: repeat(4,fit-content);
+    grid-auto-columns: 1fr;
     overflow: hidden;
     align-items: center;
     
